# This allows us to optimize dependencies
# https://github.com/rust-lang/rust/issues/48683
cargo-features = ["profile-overrides"]

[workspace]
members = ["mehlon", "mehlon-server", "mehlon-meshgen"]
default-members = ["mehlon"]

[profile.dev]
# Default opt level
#opt-level = 0
# Debuginfo bloats the binary and makes linking
# very very slow.
debug = false

# This allows us to optimize dependencies
# If you aren't on nightly, you can just comment this out.
[profile.dev.package."*"]
opt-level = 3

# Also optimize mehlon-meshgen
# Per default, workspace members are not included by "*".
[profile.dev.package.mehlon-meshgen]
opt-level = 3
