[workspace]
members = ["mehlon", "mehlon-server", "mehlon-meshgen"]
default-members = ["mehlon"]

[profile.dev]
# Default opt level
#opt-level = 0
# Debuginfo bloats the binary and makes linking
# very very slow.
debug = false

# This allows us to optimize dependencies
[profile.dev.package."*"]
opt-level = 3

# Also optimize mehlon-meshgen
[profile.dev.package.mehlon-meshgen]
opt-level = 3
