[workspace]
members = ["mimas", "mimas-server", "mimas-meshgen"]
default-members = ["mimas"]

[profile.dev]
# Default opt level
#opt-level = 0
# Debuginfo bloats the binary and makes linking
# very very slow.
debug = false

# This allows us to optimize dependencies
[profile.dev.package."*"]
opt-level = 3

# Also optimize mimas-meshgen
# Per default, workspace members are not included by "*".
[profile.dev.package.mimas-meshgen]
opt-level = 3
