[package]
name = "mehlon-server"
version = "0.4.0-dev"
authors = ["est31 <MTest31@outlook.com>"]

[[bin]]
name = "mehlon-server"
path = "main.rs"

[lib]
name = "mehlon_server"
path = "lib.rs"

[dependencies]
noise = "0.6"
nalgebra = { version = "0.18", features = ["serde-serialize"] }
rand_pcg = "0.2"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
serde-big-array = "0.2"
structopt = "0.3"
fasthash = "0.4"
toml = "0.5"
rust-argon2 = "0.5"

# For the networking
webpki = "0.21"
rustls = { version = "0.16", features = ["dangerous_configuration"] }
tokio = "0.1.6"
futures = "0.1.21"
quinn = "0.4"
slog-term = "2"
slog = "2.2"
rcgen = { version = "0.7", default-features = false }
srp = "0.4"
sha2 = "0.8"

# For map storage
rusqlite = "0.20"
libsqlite3-sys = "0.16"
byteorder = "1.0"
flate2 = "1.0"
base64 = "0.11"
