[package]
name = "mehlon"
version = "0.4.0-dev"
authors = ["est31 <MTest31@outlook.com>"]

[[bin]]
name = "mehlon"
path = "main.rs"

[dependencies]
nalgebra = "0.18"
num-traits = "0.2"
frustum_query = "0.1"
glium = "0.25"
#glium-glyph = { path = "../../glium-glyph" }
#glium-glyph = { git = "https://github.com/est31/glium-glyph" }
glium-glyph = "0.6"
rand_pcg = "0.2"
rand = "0.7"
structopt = "0.3"
srp = "0.4"
sha2 = "0.8"
image = { version = "0.22", default-features = false, features = ["png_codec"] }
mehlon-server = { path = "../mehlon-server" }
mehlon-meshgen = { path = "../mehlon-meshgen" }
dirs = "2.0"
