[package]
name = "mimas-client"
version = "0.5.0-dev"
authors = ["est31 <MTest31@outlook.com>"]

[lib]
name = "mimas_client"
path = "lib.rs"

[dependencies]
anyhow = "1.0"
nalgebra = "0.29"
num-traits = "0.2"
frustum_query = "0.1"
glium = "0.30"
#glium-glyph = { path = "../../glium-glyph" }
#glium-glyph = { git = "https://github.com/est31/glium-glyph" }
glium-glyph = "0.11"
rand_pcg = "0.2"
rand = "0.7"
srp = "0.5"
sha2 = "0.9"
image = { version = "0.23", default-features = false, features = ["png"] }
mimas-common = { path = "../mimas-common" }
mimas-meshgen = { path = "../mimas-meshgen" }
dirs = "3.0"
