[package]
name = "mimas-server"
version = "0.5.0-dev"
authors = ["est31 <MTest31@outlook.com>"]
edition = "2018"

[[bin]]
name = "mimas-server"
path = "main.rs"

[lib]
name = "mimas_server"
path = "lib.rs"

[dependencies]
anyhow = "1.0"
noise = { version = "0.6", default-features = false }
nalgebra = { version = "0.22", features = ["serde-serialize"] }
rand_pcg = "0.2"
rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
serde-big-array = "0.3"
structopt = "0.3"
twox-hash = "1.5"
toml = "0.5"
rust-argon2 = "0.8"

# For the networking
webpki = "0.21"
rustls = { version = "0.17", features = ["dangerous_configuration"] }
tokio = { version = "0.2", default-features = false, features = ["io-util", "rt-core"] }
futures = "0.3"
quinn = { version = "0.6", default-features = false, features = [ "tls-rustls" ] }
rcgen = { version = "0.8", default-features = false }
srp = "0.4"
sha2 = "0.8"

# For map storage
rusqlite = "0.24"
libsqlite3-sys = "0.20"
byteorder = "1.0"
flate2 = "1.0"
base64 = "0.13"
