[package]
name = "mimas-server"
version = "0.5.0-dev"
authors = ["est31 <MTest31@outlook.com>"]
edition = "2018"

[[bin]]
name = "mimas-server"
path = "main.rs"

[lib]
name = "mimas_server"
path = "lib.rs"

[dependencies]
mimas-common = { path = "../mimas-common" }
anyhow = "1.0"
noise = { version = "0.6", default-features = false }
nalgebra = { version = "0.29", features = ["serde-serialize"] }
rand_pcg = "0.2"
rand = "0.7"
serde = "1.0"
bincode = "1.0"
structopt = "0.3"
twox-hash = "1.5"
toml = "0.5"
rust-argon2 = "0.8"

# For the networking
srp = "0.5"
sha2 = "0.9"

# For map storage
serde_derive = "1.0"
rusqlite = "0.26"
libsqlite3-sys = "0.23"
byteorder = "1.0"
flate2 = "1.0"
base64 = "0.13"
