[package]
name = "mimas"
version = "0.5.0-dev"
authors = ["est31 <MTest31@outlook.com>"]

[[bin]]
name = "mimas"
path = "main.rs"

[dependencies]
anyhow = "1.0"
nalgebra = "0.22"
num-traits = "0.2"
frustum_query = "0.1"
glium = "0.27"
#glium-glyph = { path = "../../glium-glyph" }
#glium-glyph = { git = "https://github.com/est31/glium-glyph" }
glium-glyph = "0.8"
rand_pcg = "0.2"
rand = "0.7"
structopt = "0.3"
srp = "0.4"
sha2 = "0.8"
image = { version = "0.23", default-features = false, features = ["png"] }
mimas-server = { path = "../mimas-server" }
mimas-meshgen = { path = "../mimas-meshgen" }
dirs = "3.0"
