[package]
name = "mimas"
version = "0.5.0-dev"
authors = ["est31 <MTest31@outlook.com>"]

[[bin]]
name = "mimas"
path = "main.rs"

[dependencies]
anyhow = "1.0"
glium = "0.30"
structopt = "0.3"
mimas-common = { path = "../mimas-common" }
mimas-server = { path = "../mimas-server" }
mimas-client = { path = "../mimas-client" }
